<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jona.com.suamycv.Referencias">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:minHeight="?attr/actionBarSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorBlanco"
                android:background="?attr/colorPrimary">
            </android.support.v7.widget.Toolbar>

        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:padding="12dp"
        android:orientation="vertical"
        >

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:background="@drawable/layout_bg"
        android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28dp"
        android:textStyle="bold"
        android:textColor="#3F51B5"
        android:layout_marginTop="24dp"
        android:text="Referencias Personales"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textColor="#212121"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:text="@string/referencia1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textColor="#212121"
        android:layout_marginTop="6dp"
        android:text="@string/referencia1_detalle"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textColor="#212121"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:text="@string/referencia2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textColor="#212121"
        android:layout_marginTop="6dp"
        android:text="@string/referencia2_detalle"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textColor="#212121"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:text="@string/referencia3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textColor="#212121"
        android:layout_marginTop="6dp"
        android:text="@string/referencia3_detalle"/>

    </LinearLayout>
    </LinearLayout>
    </LinearLayout>

</RelativeLayout>
