<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jona.com.suamycv.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:minHeight="?attr/actionBarSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorBlanco"
                android:background="?attr/colorPrimary">
            </android.support.v7.widget.Toolbar>

        </LinearLayout>
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        android:layout_marginTop="55dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_marginRight="45dp"
            android:layout_marginLeft="45sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/ldlNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textColor="#3F51B5"
                android:textStyle="bold"
                android:textSize="16dp"/>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/colorPrimaryDark"/>
        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_bg"
            android:layout_marginTop="9dp"
            android:padding="15dp"

            >


            <ImageView
                android:id="@+id/imgView"
                android:padding="2dp"
                android:layout_width="120dp"
                android:layout_height="180dp"
                android:src="@drawable/perfil"/>


            <TextView
                android:id="@+id/info"
                android:layout_marginTop="13dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/imgView"
                android:textSize="12dp"
                android:textColor="#212121"
                android:text="@string/info1"/>

            <TextView
                android:id="@+id/info1"
                android:layout_marginTop="13dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/imgView"
                android:layout_below="@id/info"
                android:textSize="12dp"
                android:textColor="#212121"
                android:text="@string/info2"/>

        </RelativeLayout>


        <View
            android:id="@+id/view11"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"/>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/layout_bg"
            android:padding="12dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/objetivo"
                />

        </RelativeLayout>




        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="12dp"
            android:background="@color/colorPrimaryDark"/>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            >

            <Button
                android:id="@+id/menuButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_buttom"
                android:textColor="#ffff"
                android:text="Menú"
                />

        </RelativeLayout>



        <RelativeLayout
            android:id="@+id/menuButtonRL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-185dp"
            android:layout_marginLeft="95dp"
            android:padding="10dp"
            android:background="@drawable/layout_bg"
            android:visibility="gone"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:layout_marginTop="5dp"
                    android:id="@+id/btnExperiencia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:textSize="12dp"
                    android:textColor="#ffff"
                    android:background="@drawable/ripple_buttom"
                    android:text="Experiencia profesional"/>

                <Button
                    android:padding="17dp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/btnFormacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:background="@drawable/ripple_buttom"
                    android:textColor="#ffff"
                    android:text="Formación académica"/>

                <Button
                    android:padding="10dp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/btnReferencias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:background="@drawable/ripple_buttom"
                    android:textColor="#ffff"
                    android:text="Referencias Personales"/>
            </LinearLayout>

        </RelativeLayout>



    </LinearLayout>

</RelativeLayout>
